--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 22:05:07 2018</p>
+         Last Run: Sun Dec  2 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-10</td>
                         <td>-14</td>
                         <td>6</td>
@@ -38,11 +38,11 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-11</td>
                         <td>-16</td>
                         <td>5</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "20",
-                 "12"
+                 "47",
+                 "35",
+                 "25"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 22:05:07 2018</p>
+         Last Run: Sun Dec  2 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -273,7 +273,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "6",
                  "6"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
                  "85",
-                 "88"
+                 "85",
+                 "89"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 22:05:07 2018</p>
+         Last Run: Sun Dec  2 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 22:05:07 2018</p>
+         Last Run: Sun Dec  2 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,15 +675,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>27</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -695,7 +695,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
+                 "57",
                  "55",
-                 "53"
+                 "52"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "33",
-                 "38"
+                 "34",
+                 "35",
+                 "37"
                ]
              }
            ]
