--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 23:05:06 2018</p>
+         Last Run: Mon Dec  3 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,21 +32,21 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-10</td>
-                        <td>-14</td>
+                        <td>-15</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-15</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -58,11 +58,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
-                 "-16",
+                 "-15",
+                 "-15",
                  "-16"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-11",
+                 "-10",
                  "-11"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
                  "84",
-                 "83"
+                 "82",
+                 "82"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "47",
                  "35",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 23:05:06 2018</p>
+         Last Run: Mon Dec  3 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -261,7 +261,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -273,9 +273,9 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>6</td>
-                        <td>89</td>
+                        <td>85</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
                         <td>0</td>
                      </tr>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-19",
+                 "-18",
                  "-19",
                  "-20"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-14",
+                 "-13",
                  "-14",
                  "-15"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "85",
-                 "89"
+                 "82",
+                 "83",
+                 "85"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 23:05:06 2018</p>
+         Last Run: Mon Dec  3 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-12</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-6</td>
+                        <td>-11</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-5</td>
+                        <td>-10</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-8",
-                 "-6"
+                 "-12",
+                 "-11",
+                 "-10"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-7",
                  "-6",
-                 "-4",
-                 "-2"
+                 "-5"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "58",
-                 "55"
+                 "65",
+                 "66",
+                 "65"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "30",
-                 "32"
+                 "29",
+                 "32",
+                 "35"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 23:05:06 2018</p>
+         Last Run: Mon Dec  3 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -676,13 +676,13 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>34</td>
                      </tr>
                      <tr>
@@ -694,20 +694,20 @@
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>35</td>
+                        <td>WSW</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-4",
-                 "-4"
+                 "-2"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
-                 "0"
+                 "1"
                ]
              }
            ]
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "59",
                  "55",
                  "52"
                ]
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "34",
-                 "35",
-                 "37"
+                 "34",
+                 "36"
                ]
              }
            ]
