--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 12:05:02 2018</p>
+         Last Run: Mon Dec  3 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,7 +37,7 @@
                         <td>80</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>20</td>
                      </tr>
                      <tr>
@@ -46,7 +46,7 @@
                         <td>-10</td>
                         <td>-15</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-15</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-15",
                  "-15",
-                 "-15"
+                 "-16"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-10"
+                 "-11"
                ]
              }
            ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "78",
-                 "79"
+                 "76",
+                 "78"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "20",
                  "15",
-                 "10"
+                 "9"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 12:05:02 2018</p>
+         Last Run: Mon Dec  3 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,8 +246,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-15</td>
+                        <td>-20</td>
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
@@ -261,7 +261,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -273,7 +273,7 @@
                         <td>-16</td>
                         <td>-22</td>
                         <td>7</td>
-                        <td>91</td>
+                        <td>92</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-19",
+                 "-20",
                  "-20",
                  "-22"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-14",
+                 "-15",
                  "-15",
                  "-16"
                ]
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "86",
-                 "91"
+                 "87",
+                 "92"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 12:05:02 2018</p>
+         Last Run: Mon Dec  3 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
-                        <td>-8</td>
-                        <td>-13</td>
+                        <td>Partly Cloudy</td>
+                        <td>-7</td>
+                        <td>-12</td>
                         <td>1</td>
-                        <td>65</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>1</td>
-                        <td>63</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>0</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
+                        <td>0</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>60</td>
-                        <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
-                 "-10",
+                 "-12",
+                 "-9",
                  "-8"
                ]
              },
@@ -531,8 +531,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-8",
-                 "-6",
+                 "-7",
+                 "-5",
                  "-4"
                ]
              }
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "1",
-                 "1"
+                 "0",
+                 "0"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "63",
-                 "60"
+                 "62",
+                 "62",
+                 "58"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "24",
-                 "32"
+                 "30",
+                 "34",
+                 "40"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 12:05:02 2018</p>
+         Last Run: Mon Dec  3 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -679,19 +679,19 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>62</td>
-                        <td>0</td>
-                        <td>11</td>
+                        <td>63</td>
+                        <td>1</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -700,10 +700,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -735,8 +735,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-4",
-                 "-3"
+                 "-5",
+                 "-4"
                ]
              },
              {
@@ -747,8 +747,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
-                 "1"
+                 "-1",
+                 "0"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "58",
-                 "56"
+                 "63",
+                 "60",
+                 "58"
                ]
              },
              {
@@ -827,7 +827,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
+                 "49",
                  "48",
                  "45"
                ]
